--- a/index.html
+++ b/index.html
@@ -26,51 +26,87 @@
     <title>Keykaps</title>
   </head>
   <body>
-    <div class="carousel-container">
-      <div class="radios">
-        <input type="radio" name="test" />
-        <input type="radio" name="test" />
-        <input type="radio" name="test" />
+    <header>
+      <div class="nav-container">
+        <h2 class="logo">KEYKAPS</h2>
+        <nav class="main-nav">
+          <ul class="nav__list">
+            <li><i class="theme-btn fa-solid fa-sun"></i></li>
+            <li>Home</li>
+            <li>Products</li>
+            <li>Contact</li>
+            <li><i class="fa-solid fa-cart-shopping"></i></li>
+          </ul>
+        </nav>
       </div>
-      <!-- <button class="carousel-button carousel-right">
-        <i class="fa-solid fa-chevron-right"></i>
-      </button> -->
-      <!-- <button class="carousel-button carousel-left">
-        <i class="fa-solid fa-chevron-left"></i>
-      </button> -->
-
-      <ul class="carousel__list">
-        <li class="carousel-list__item">
-          <figure class="img-container">
-            <img class="carousel__img" src="images/nuphyAir96.jpg" alt="" />
-            <p class="img-title top-title">Nuphy Air 96</p>
-          </figure>
-        </li>
-        <li class="hidden carousel-list__item">
-          <figure class="img-container">
-            <img class="carousel__img" src="images/nuphy3.jpg" alt="" />
-            <p class="img-title top-title">Nuphy 3</p>
-          </figure>
-        </li>
-        <li class="hidden carousel-list__item">
-          <figure class="img-container">
-            <img class="carousel__img" src="images/nuphyCaps.jpg" alt="" />
-            <p class="img-title bottom-title">New Caps</p>
-          </figure>
-        </li>
-        <li class="hidden carousel-list__item">
-          <figure class="img-container">
-            <img class="carousel__img" src="images/nuphy1.jpg" alt="" />
-            <p class="img-title bottom-title">Nuphy Air 60</p>
-          </figure>
-        </li>
-        <li class="hidden carousel-list__item">
-          <figure class="img-container">
-            <img class="carousel__img" src="images/nuphy2.jpg" alt="" />
-            <p class="img-title bottom-title">Nuphy Air 75</p>
-          </figure>
-        </li>
-      </ul>
-    </div>
+    </header>
+    <main>
+      <div class="main-container">
+        <section class="welcome-container">
+          <img
+            class="welcome__img dark"
+            src="images/welcome/test2.png"
+            alt=""
+          />
+          <img
+            class="hidden welcome__img light"
+            src="images/welcome/test3.png"
+            alt=""
+          />
+        </section>
+        <section class="carousel-container">
+          <div class="images">
+            <figure class="img-container">
+              <img
+                class="carousel__img"
+                src="images/sliderImages/nuphyAir96.jpg"
+                alt=""
+              />
+              <p class="img-title top-title">Nuphy Air 96</p>
+            </figure>
+            <figure class="hidden img-container">
+              <img
+                class="carousel__img"
+                src="images/sliderImages/nuphy3.jpg"
+                alt=""
+              />
+              <p class="img-title top-title">Nuphy 3</p>
+            </figure>
+            <figure class="hidden img-container">
+              <img
+                class="carousel__img"
+                src="images/sliderImages/nuphyCaps.jpg"
+                alt=""
+              />
+              <p class="img-title bottom-title">New Caps</p>
+            </figure>
+            <figure class="hidden img-container">
+              <img
+                class="carousel__img"
+                src="images/sliderImages/nuphy1.jpg"
+                alt=""
+              />
+              <p class="img-title bottom-title">Nuphy Air 60</p>
+            </figure>
+            <figure class="hidden img-container">
+              <img
+                class="carousel__img"
+                src="images/sliderImages/nuphy2.jpg"
+                alt=""
+              />
+              <p class="img-title bottom-title">Nuphy Air 75</p>
+            </figure>
+          </div>
+        </section>
+        <section class="products">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Repellendus beatae ullam omnis libero reiciendis ab mollitia, at
+            similique facere quasi laudantium voluptatem repellat nam aliquid
+            voluptate quaerat enim magni vero?
+          </p>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
