first steps to product grid - html template

--- a/index.html
+++ b/index.html
@@ -99,12 +99,40 @@
           </div>
         </section>
         <section class="products">
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Repellendus beatae ullam omnis libero reiciendis ab mollitia, at
-            similique facere quasi laudantium voluptatem repellat nam aliquid
-            voluptate quaerat enim magni vero?
-          </p>
+          <div class="grid-container">
+            <div class="product-card">
+              <figure>
+                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+          </div>
         </section>
       </div>
     </main>
