first version of filter and product grid. Also first go at sticky heading

--- a/index.html
+++ b/index.html
@@ -26,34 +26,23 @@
     <title>Keykaps</title>
   </head>
   <body>
-    <header>
-      <div class="nav-container">
-        <h2 class="logo">KEYKAPS</h2>
-        <nav class="main-nav">
-          <ul class="nav__list">
-            <li><i class="theme-btn fa-solid fa-sun"></i></li>
-            <li>Home</li>
-            <li>Products</li>
-            <li>Contact</li>
-            <li><i class="fa-solid fa-cart-shopping"></i></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
     <main>
+      <header>
+        <div class="nav-container">
+          <h2 class="logo">KEYKAPS</h2>
+          <nav class="main-nav">
+            <ul class="nav__list">
+              <li><i class="theme-btn fa-solid fa-sun"></i></li>
+              <li>Home</li>
+              <li>Products</li>
+              <li>Contact</li>
+              <li><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
       <div class="main-container">
-        <section class="welcome-container">
-          <img
-            class="welcome__img dark"
-            src="images/welcome/test2.png"
-            alt=""
-          />
-          <img
-            class="hidden welcome__img light"
-            src="images/welcome/test3.png"
-            alt=""
-          />
-        </section>
+        <section class="welcome-container"></section>
         <section class="carousel-container">
           <div class="images">
             <figure class="img-container">
@@ -99,10 +88,22 @@
           </div>
         </section>
         <section class="products">
+          <div class="products__filter">
+            <ul class="filter__list">
+              <li class="filter__item">ALL</li>
+              <li class="active-filter filter__item">KEYBOARDS</li>
+              <li class="filter__item">KEYCAPS</li>
+              <li class="filter__item">SWITCHES</li>
+            </ul>
+          </div>
           <div class="grid-container">
             <div class="product-card">
               <figure>
-                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
               </figure>
               <p class="product-card__title">Product 1</p>
               <p class="product-card__details">This is a fancy keyboard</p>
@@ -110,7 +111,11 @@
             </div>
             <div class="product-card">
               <figure>
-                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
               </figure>
               <p class="product-card__title">Product 1</p>
               <p class="product-card__details">This is a fancy keyboard</p>
@@ -118,7 +123,11 @@
             </div>
             <div class="product-card">
               <figure>
-                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
               </figure>
               <p class="product-card__title">Product 1</p>
               <p class="product-card__details">This is a fancy keyboard</p>
@@ -126,7 +135,83 @@
             </div>
             <div class="product-card">
               <figure>
-                <img src="images/sliderImages/nuphy1.jpg" alt="" />
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy1.jpg"
+                  alt=""
+                />
               </figure>
               <p class="product-card__title">Product 1</p>
               <p class="product-card__details">This is a fancy keyboard</p>
