admin-page html and css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <title>Keykaps</title>
   </head>
   <body>
+    <a href="./admin.html">ADMIN</a>
     <div class="carousel-container">
       <div class="radios">
         <input type="radio" name="test" />
