admin in admin map

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/index.js" type="module" defer></script>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <!-- Fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,7 +26,7 @@
     <title>Keykaps</title>
   </head>
   <body>
-    <a href="./admin.html">ADMIN</a>
+    <a href="./admin/">ADMIN</a>
     <div class="carousel-container">
       <div class="radios">
         <input type="radio" name="test" />
