--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/admin_page.css" />
+    <link rel="stylesheet" href="./admin_page.css" />
 
     <!-- Fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
