welcome screen placeholder

--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
         </div>
       </header>
       <div class="main-container">
-        <section class="welcome-container"></section>
-        <section class="carousel-container">
+        <section class="welcome-container">
+          <div class="welcome__text">
+            <div class="text-container">
+              <p class="title title1">Anything For</p>
+              <p class="title title2">Mechanical Keyboards</p>
+            </div>
+          </div>
+        </section>
+        <!-- <section class="carousel-container">
           <div class="images">
             <figure class="img-container">
               <img
@@ -86,7 +93,7 @@
               <p class="img-title bottom-title">Nuphy Air 75</p>
             </figure>
           </div>
-        </section>
+        </section> -->
         <section class="products">
           <div class="products__filter">
             <ul class="filter__list">
