--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@
           <h2 class="logo">KEYKAPS</h2>
           <nav class="main-nav">
             <ul class="nav__list">
-              <li><i class="theme-btn fa-solid fa-sun"></i></li>
-              <li>Home</li>
-              <li>Products</li>
-              <li>Contact</li>
-              <li><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="full-nav">
+                <i class="theme-btn fa-solid fa-sun"></i>
+              </li>
+              <li class="full-nav">Home</li>
+              <li class="full-nav">Products</li>
+              <li class="full-nav">Contact</li>
+              <li class="full-nav">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </li>
+
+              <li class="mobile-nav"><i class="fa-solid fa-bars"></i></li>
             </ul>
           </nav>
         </div>
