started working on product card carousel

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     ></script>
 
     <!-- Title -->
-    <title>Keykaps</title>
+    <title>#️⃣ Keykaps</title>
   </head>
   <body>
     <main>
@@ -111,13 +111,73 @@
           </div>
           <div class="grid-container">
             <div class="product-card">
-              <figure>
-                <img
-                  class="product-card__img"
-                  src="images/sliderImages/nuphy1.jpg"
-                  alt=""
-                />
-              </figure>
+              <div class="product-img-container">
+                <div class="carousel-btn right-btn">
+                  <i class="fa-solid fa-chevron-right"></i>
+                </div>
+                <div class="carousel-btn left-btn">
+                  <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <figure class="test-figure">
+                  <img
+                    class="product-card__img"
+                    src="images/sliderImages/nuphy1.jpg"
+                    alt=""
+                  />
+                </figure>
+                <figure class="test-figure">
+                  <img
+                    class="product-card__img"
+                    src="images/sliderImages/nuphy2.jpg"
+                    alt=""
+                  />
+                </figure>
+              </div>
+
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <div class="product-img-container">
+                <figure class="test-figure">
+                  <img
+                    class="product-card__img"
+                    src="images/sliderImages/nuphyHalo.jpg"
+                    alt=""
+                  />
+                </figure>
+                <figure class="test-figure">
+                  <img
+                    class="product-card__img"
+                    src="images/sliderImages/nuphy2.jpg"
+                    alt=""
+                  />
+                </figure>
+              </div>
+
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card">
+              <div class="product-img-container">
+                <figure class="test-figure">
+                  <img
+                    class="product-card__img one"
+                    src="images/sliderImages/nuphyAir96.jpg"
+                    alt=""
+                  />
+                </figure>
+                <figure class="test-figure">
+                  <img
+                    class="product-card__img two"
+                    src="images/sliderImages/nuphy2.jpg"
+                    alt=""
+                  />
+                </figure>
+              </div>
+
               <p class="product-card__title">Product 1</p>
               <p class="product-card__details">This is a fancy keyboard</p>
               <p class="product-card__price">$399</p>
@@ -126,7 +186,7 @@
               <figure>
                 <img
                   class="product-card__img"
-                  src="images/sliderImages/nuphy1.jpg"
+                  src="images/sliderImages/nuphy2.jpg"
                   alt=""
                 />
               </figure>
