carousel works on one example card

--- a/index.html
+++ b/index.html
@@ -111,27 +111,29 @@
           </div>
           <div class="grid-container">
             <div class="product-card">
-              <div class="product-img-container">
+              <div class="product-img-container one">
                 <div class="carousel-btn right-btn">
                   <i class="fa-solid fa-chevron-right"></i>
                 </div>
                 <div class="carousel-btn left-btn">
                   <i class="fa-solid fa-chevron-left"></i>
                 </div>
-                <figure class="test-figure">
-                  <img
-                    class="product-card__img"
-                    src="images/sliderImages/nuphy1.jpg"
-                    alt=""
-                  />
-                </figure>
-                <figure class="test-figure">
-                  <img
-                    class="product-card__img"
-                    src="images/sliderImages/nuphy2.jpg"
-                    alt=""
-                  />
-                </figure>
+                <div class="carousel">
+                  <figure class="test-figure">
+                    <img
+                      class="product-card__img"
+                      src="images/sliderImages/nuphy1.jpg"
+                      alt=""
+                    />
+                  </figure>
+                  <figure class="test-figure">
+                    <img
+                      class="product-card__img"
+                      src="images/sliderImages/nuphy2.jpg"
+                      alt=""
+                    />
+                  </figure>
+                </div>
               </div>
 
               <p class="product-card__title">Product 1</p>
