changed couple of options on carousel in js

--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
                   src="images/sliderImages/nuphy2.jpg"
                   alt=""
                 />
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/nuphy3.jpg"
+                  alt=""
+                />
               </div>
               <p class="product-card__title">Product 1</p>
               <p class="product-card__details">This is a fancy keyboard</p>
