first go at filter and tweaking flickity btns

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </header>
       <div class="main-container">
         <section class="welcome-container">
-          <div class="welcome__text">
+          <div class="welcome__text welcome__right">
             <div class="text-container">
               <p class="title title1">Anything For</p>
               <p class="title title2">Mechanical Keyboards</p>
@@ -115,14 +115,14 @@
         <section class="products">
           <div class="products__filter">
             <ul class="filter__list">
-              <li class="filter__item">ALL</li>
-              <li class="active-filter filter__item">KEYBOARDS</li>
-              <li class="filter__item">KEYCAPS</li>
-              <li class="filter__item">SWITCHES</li>
+              <li class="active-filter filter__item" data-filter="all">ALL</li>
+              <li class="filter__item" data-filter="keyboard">KEYBOARDS</li>
+              <li class="filter__item" data-filter="keycaps">KEYCAPS</li>
+              <li class="filter__item" data-filter="switches">SWITCHES</li>
             </ul>
           </div>
           <div class="grid-container">
-            <div class="product-card">
+            <div class="product-card keyboard">
               <figure class="">
                 <img
                   class="product-card__img"
@@ -134,7 +134,7 @@
               <p class="product-card__details">This is a fancy keyboard</p>
               <p class="product-card__price">$399</p>
             </div>
-            <div class="product-card">
+            <div class="product-card keyboard">
               <div class="carousel">
                 <img
                   class="product-card__img"
@@ -157,7 +157,91 @@
               <p class="product-card__details">This is a fancy keyboard</p>
               <p class="product-card__price">$399</p>
             </div>
-            <div class="product-card">
+            <div class="product-card keycaps">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/keycapsBlack.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card keycaps">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/keykapsBlue.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card keycaps">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/keykapsGreen.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card keycaps">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/keycapsBlack.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card switches">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/switchBrown.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card switches">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/switchGreen.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card switches">
+              <figure>
+                <img
+                  class="product-card__img"
+                  src="images/sliderImages/switchRed.jpg"
+                  alt=""
+                />
+              </figure>
+              <p class="product-card__title">Product 1</p>
+              <p class="product-card__details">This is a fancy keyboard</p>
+              <p class="product-card__price">$399</p>
+            </div>
+            <div class="product-card keyboard">
               <figure>
                 <img
                   class="product-card__img"
@@ -169,7 +253,7 @@
               <p class="product-card__details">This is a fancy keyboard</p>
               <p class="product-card__price">$399</p>
             </div>
-            <div class="product-card">
+            <div class="product-card keyboard">
               <figure>
                 <img
                   class="product-card__img"
@@ -181,43 +265,7 @@
               <p class="product-card__details">This is a fancy keyboard</p>
               <p class="product-card__price">$399</p>
             </div>
-            <div class="product-card">
-              <figure>
-                <img
-                  class="product-card__img"
-                  src="images/sliderImages/nuphy1.jpg"
-                  alt=""
-                />
-              </figure>
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <figure>
-                <img
-                  class="product-card__img"
-                  src="images/sliderImages/nuphy1.jpg"
-                  alt=""
-                />
-              </figure>
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <figure>
-                <img
-                  class="product-card__img"
-                  src="images/sliderImages/nuphy1.jpg"
-                  alt=""
-                />
-              </figure>
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
+            <div class="product-card keyboard">
               <figure>
                 <img
                   class="product-card__img"
