mobile nav from above, added dark overlay and overflow hidden.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </head>
   <body>
     <main>
+      <div class="overlay"></div>
       <div class="nav-container-mobile">
         <ul class="mobile-nav-list">
           <li>Home</li>
