fixed overlay, added extra features to mobile nav

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="overlay"></div>
       <div class="nav-container-mobile">
         <ul class="mobile-nav-list">
-          <li>Home</li>
+          <li><a class="mobile-home-btn" href="#">Home</a></li>
           <li>Products</li>
           <li>Contact</li>
         </ul>
@@ -55,7 +55,7 @@
                 <i class="fa-solid fa-cart-shopping"></i>
               </li>
 
-              <li class="mobile-nav-btn"><i class="fa-solid fa-bars"></i></li>
+              <li><i class="mobile-nav-btn fa-solid fa-bars"></i></li>
             </ul>
           </nav>
         </div>
