fixed mobile hamburger appearing always

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <i class="fa-solid fa-cart-shopping"></i>
               </li>
 
-              <li><i class="mobile-nav-btn fa-solid fa-bars"></i></li>
+              <li class="mobile-nav-list-item">
+                <i class="mobile-nav-btn fa-solid fa-bars"></i>
+              </li>
             </ul>
           </nav>
         </div>
